--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -22,7 +22,7 @@ jobs:
         cache: 'npm'
 
     - name: Instalar dependencias
-      run: npm install --legacy-peer-deps && npm ci
+      run: npm install --legacy-peer-deps
 
     - name: Build Ionic (Producción)
       run: npm run build -- --configuration production
