--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/http": "^0.0.2",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/splash-screen": "^7.0.4",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "capacitor-email-composer": "^7.0.0",
