Fix: Eliminado capacitor-http incompatible

--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,13 +1,11 @@
 {
 	"appId": "io.ionic.starter",
-	"appName": "Lol Dominicana",
+	"appName": "torneo-lolApp",
 	"webDir": "www",
 	"packageClassList": [
 		"AppPlugin",
 		"HapticsPlugin",
-		"CAPHttpPlugin",
 		"KeyboardPlugin",
-		"SplashScreenPlugin",
 		"StatusBarPlugin",
 		"EmailComposerPlugin"
 	]
