--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "io.ionic.starter",
-	"appName": "torneo-lolApp",
+	"appId": "com.myapp.loldominicana",
+	"appName": "Lol Dominicana",
 	"webDir": "www",
 	"packageClassList": [
 		"AppPlugin",
