--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -2,10 +2,28 @@
 	"appId": "com.myapp.loldominicana",
 	"appName": "Lol Dominicana",
 	"webDir": "www",
+	"plugins": {
+		"SplashScreen": {
+			"launchShowDuration": 0,
+			"launchAutoHide": true,
+			"backgroundColor": "rgba(255, 255, 255, 0)",
+			"androidSplashResourceName": "splash",
+			"androidScaleType": "CENTER_CROP",
+			"showSpinner": false,
+			"androidSpinnerStyle": "large",
+			"iosSpinnerStyle": "small",
+			"spinnerColor": "#999999",
+			"splashFullScreen": false,
+			"splashImmersive": false,
+			"layoutName": "launch_screen",
+			"useDialog": false
+		}
+	},
 	"packageClassList": [
 		"AppPlugin",
 		"HapticsPlugin",
 		"KeyboardPlugin",
+		"SplashScreenPlugin",
 		"StatusBarPlugin",
 		"EmailComposerPlugin"
 	]
